Favlink wrap fixed

--- a/web/frontend/styles.css
+++ b/web/frontend/styles.css
@@ -17,7 +17,7 @@ vaadin-progress-bar {
 }
 
 a {
-	white-space: break-spaces !important;
+	white-space: nowrap !important;
 }
 
 .button-link {
@@ -306,7 +306,6 @@ vaadin-horizontal-layout.menu {
 	#left-content {
 		position: sticky;
 	    position: -webkit-sticky;
-	    z-index: 1;
 	    top: 15px;
 	}
 }
